@@ -43,6 +43,8 @@ Version 1.3-5, August 23, 2011
       bivariate kernel density estimates and scatterplots
       in a matrix with univariate densities as diagonal.
     * dctable add object name even if length(n.clones)==1.
+    * initsfun handling in dc.parfit partly allowed,
+      this new feature is undocumented and needs testing.
 
 Version 1.3-4, July 9, 2011
     * dc.fit: updating fixed (only updated after 2nd iteration).
